--- a/apache/Dockerfile
+++ b/apache/Dockerfile
@@ -1,31 +1,31 @@
 FROM ricardoamaro/uptime-base:latest
-
 MAINTAINER Ricardo Amaro <ricardo.amaro_at_acquia.com>
 ENV DEBIAN_FRONTEND noninteractive
 
-# Install Python
-RUN \
-  apt-get update && \
-  apt-get install -y python python-dev python-pip python-virtualenv && \
-  rm -rf /var/lib/apt/lists/*
+RUN dpkg-divert --local --rename --add /sbin/initctl
+RUN ln -sf /bin/true /sbin/initctl
 
-# Install Node.js
-RUN \
-  cd /tmp && \
-  wget http://nodejs.org/dist/node-latest.tar.gz && \
-  tar xvzf node-latest.tar.gz && \
-  rm -f node-latest.tar.gz && \
-  cd node-v* && \
-  ./configure && \
-  CXX="g++ -Wno-unused-local-typedefs" make && \
-  CXX="g++ -Wno-unused-local-typedefs" make install && \
-  cd /tmp && \
-  rm -rf /tmp/node-v* && \
-  npm install -g npm && \
-  printf '\n# Node.js\nexport PATH="node_modules/.bin:$PATH"' >> /root/.bashrc
+RUN apt-get -y install supervisor apache2 libapache2-mod-php5 pwgen python-setuptools \
+  vim-tiny php5 php5-mysql php-apc php5-gd php5-curl mc; \
+  apt-get clean; \
+  apt-get autoclean; \
+  apt-get -y autoremove
 
-# Define working directory.
-WORKDIR /data
+RUN mkdir -p /var/lock/apache2 /var/run/apache2 /var/run/sshd /var/log/supervisor
 
-# Define default command.
-CMD ["/bin/bash"]
+# Install supervisor
+COPY ./files/supervisord.conf /etc/supervisor/conf.d/supervisord.conf
+COPY ./files/start.sh /start.sh
+COPY ./files/foreground.sh /etc/apache2/foreground.sh
+
+RUN rm /etc/apache2/sites-available/000-default.conf /etc/apache2/sites-enabled/*
+ADD ./files/000-default.conf /etc/apache2/sites-available/000-default.conf
+RUN a2ensite 000-default ; a2enmod rewrite vhost_alias
+
+# Display version information
+RUN php --version
+
+RUN chmod 755 /start.sh /etc/apache2/foreground.sh
+WORKDIR /var/www/html
+EXPOSE 80
+CMD ["/bin/bash", "/start.sh"]
