php5-redis update

--- a/apache/Dockerfile
+++ b/apache/Dockerfile
@@ -6,7 +6,7 @@ RUN dpkg-divert --local --rename --add /sbin/initctl
 RUN ln -sf /bin/true /sbin/initctl
 
 RUN apt-get -y install supervisor apache2 libapache2-mod-php5 pwgen python-setuptools \
-  vim-tiny php5 php5-mysql php-apc php5-gd php5-curl mc; \
+  vim-tiny php5 php5-mysql php5-redis php-apc php5-gd php5-curl mc; \
   apt-get clean; \
   apt-get autoclean; \
   apt-get -y autoremove
